# project-aether

./: .gitignore
aether/: index.html  package-lock.json  package.json  tailwind.config.ts
aether/src/: App.tsx  index.css
aether/src-tauri/: Cargo.toml  tauri.conf.json
aether/src-tauri/capabilities/: default.json
aether/src-tauri/icons/: icon.icns
aether/src-tauri/src/: main.rs
aether/src/components/: ChatHeader.tsx  EmptyState.tsx  InputBar.tsx  MessageBubble.tsx  MessageList.tsx  ModelDropdown.tsx  Sidebar.tsx  ThreadItem.tsx
aether/src/components/modals/: HelpModal.tsx  ModelsModal.tsx  SettingsModal.tsx
aether/src/lib/: drag.ts  ollama.ts  router.ts
aether/src/store/: useStore.ts
aether/src/views/: ChatView.tsx
