[package]
name = "aether"
version = "0.1.0"
description = "Aether - Local AI Chat Interface"
authors = ["you"]
edition = "2021"

[lib]
name = "aether_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-http = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
